# mdmc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_mc_data.py  conanfile.txt
dep/imgui/: CMakeLists.txt
dep/imgui_impl/: CMakeLists.txt
resources/buildings/: building.binvox
resources/shaders/: assets.frag.glsl  assets.vert.glsl  find_minecraft_nearest_block.comp.glsl  mc_block_collision_test.comp  mc_mapper.comp  mc_mapper.comp.glsl  mc_render.frag  mc_render.vert  minecraft_world.frag  minecraft_world.vert  render_model.vert  render_voxel.frag.glsl  render_voxel.geom.glsl  render_voxel.vert.glsl  render_voxel_plane.frag.glsl  render_voxel_plane.vert.glsl  scene.vert  screen_quad.vert  sort_blocks.comp  svo_node_alloc.comp  svo_node_flag.comp  svo_node_init.comp  svo_store_leaf.comp  svo_tracer.frag  visualize.frag.glsl  visualize.vert.glsl  voxelize.frag  voxelize.frag.glsl  voxelize.geom  voxelize.geom.glsl  voxelize.goem.glsl  voxelize.vert  voxelize.vert.glsl  voxelize_obb.comp
resources/shaders/octree/: octree_build.comp  octree_viewer.frag
src/: Camera.cpp  Chunk.cpp  Chunk.hpp  Main.cpp  Phase.hpp  PhaseManager.hpp  Program.cpp  Program.hpp  Renderable.hpp  Shader.cpp  Shader.hpp  VoxelStage.hpp  Voxelizer.cpp  Voxelizer.hpp  debug.hpp  field.cpp  field.hpp  gl.cpp  gl.hpp  main.cpp  voxelizer.cpp  voxelizer.hpp
src/GL/: Camera.cpp  Camera.hpp  Color.hpp  Mesh.cpp  Mesh.hpp  Program.cpp  Program.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Viewer.cpp  Viewer.hpp
src/Minecraft/: Assets.cpp  Assets.hpp  AssetsPhase.cpp  AssetsPhase.hpp  Mapper.cpp  Mapper.hpp  Minecraft.cpp  Minecraft.hpp  TextureAsset.cpp  TextureAsset.hpp  minecraft_baked_assets.cpp  minecraft_baked_assets.hpp  minecraft_block_state.cpp  minecraft_block_state.hpp  minecraft_context.cpp  minecraft_context.hpp  minecraft_model.cpp  minecraft_model.hpp  minecraft_renderer.cpp  minecraft_renderer.hpp  minecraft_version_pool.cpp  minecraft_version_pool.hpp  minecraft_world.cpp  minecraft_world.hpp  minecraft_world_renderer.cpp  minecraft_world_renderer.hpp
src/Minecraft/assets/: minecraft_assets.cpp  minecraft_assets.hpp  minecraft_block_state.cpp  minecraft_block_state.hpp  minecraft_model.cpp  minecraft_model.hpp
src/Minecraft/voxelizer/: minecraft_baked_block_pool.cpp  minecraft_baked_block_pool.hpp  minecraft_block_voxelizer.cpp  (+1 more)
src/Phases/: LoadScenePhase.cpp  LoadScenePhase.hpp  Phase.hpp  PhaseManager.cpp  PhaseManager.hpp  VisualizeScenePhase.cpp  VisualizeScenePhase.hpp  VoxelizeScenePhase.cpp  VoxelizeScenePhase.hpp
src/Routine/: LoadingPhase.hpp  ViewAssetsPhase.cpp  ViewAssetsPhase.hpp  ViewFieldPhase.cpp  ViewFieldPhase.hpp  VisualizePhase.hpp  VoxelizePhase.hpp
src/Scene/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp  Shader.hpp  ViewScenePhase.cpp  ViewScenePhase.hpp  aiSceneRenderer.cpp  aiSceneRenderer.hpp
src/Voxelizer/: Voxelizer.cpp  Voxelizer.hpp  aiSceneWrapper.cpp  aiSceneWrapper.hpp  octree.cpp  octree.hpp  volume.hpp
src/mc/: mc_assets.cpp  mc_assets.hpp  mc_baker.cpp  mc_baker.hpp  mc_blocks_voxelizer.cpp  mc_blocks_voxelizer.hpp  mc_renderer.cpp  mc_renderer.hpp  minecraft_renderer.cpp  minecraft_renderer.hpp  minecraft_world.cpp  minecraft_world.hpp
src/octree/: octree.cpp  octree.hpp  octree_builder.cpp  octree_builder.hpp  octree_tracer.cpp  octree_tracer.hpp  voxel_list.cpp  voxel_list.hpp
src/routine/: minecraft_assets_phase.cpp  minecraft_assets_phase.hpp  minecraft_blocks_phase.cpp  minecraft_blocks_phase.hpp  phase.cpp  phase.hpp  scene_phase.cpp  scene_phase.hpp  view_minecraft_blocks.hpp  view_model.hpp
src/scene/: ai_scene_loader.cpp  ai_scene_loader.hpp  mesh.cpp  mesh.hpp  scene.hpp  scene_renderer.cpp  scene_renderer.hpp  scene_voxelizer.cpp  scene_voxelizer.hpp
src/util/: camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  fixed_target_camera.cpp  fixed_target_camera.hpp  gl.cpp  gl.hpp  glfw_callback_handler.hpp  render_doc.cpp  render_doc.hpp  screen_quad.cpp  screen_quad.hpp
src/voxel/: volume.cpp  volume.hpp  voxel.hpp  voxel_fragment_list.cpp  voxel_fragment_list.hpp  voxelizer.hpp
(+4 files in other folders)
